[gd_scene load_steps=8 format=3 uid="uid://dj1eyc2ce4se1"]

[ext_resource type="Shader" path="res://Entities/Laser/laser.gdshader" id="1_0vw13"]
[ext_resource type="Script" path="res://Entities/Laser/laser.gd" id="1_5wrcg"]
[ext_resource type="Texture2D" uid="uid://cqnwngtbyq7ir" path="res://Entities/Player/2d_lights_and_shadows_neutral_point_light.webp" id="1_7akcb"]
[ext_resource type="Texture2D" uid="uid://f1b7j483kih6" path="res://Assets/My own assets/LaserParticlesTexture.tres" id="2_24gou"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2al0v"]
shader = ExtResource("1_0vw13")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ibytw"]
particle_flag_disable_z = true
angle_min = -90.0
angle_max = 90.0
spread = 180.0
initial_velocity_min = 25.0
initial_velocity_max = 75.0
scale_min = 0.05
scale_max = 0.1
color = Color(0.423529, 0.929412, 0.929412, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ty8x6"]
particle_flag_disable_z = true
angle_min = -90.0
angle_max = 90.0
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 125.0
scale_min = 0.05
scale_max = 0.1
color = Color(0.423529, 0.929412, 0.929412, 1)

[node name="Laser" type="Line2D"]
modulate = Color(0, 1, 1, 1)
material = SubResource("ShaderMaterial_2al0v")
points = PackedVector2Array(32, 0, 300, 0)
width = 5.0
default_color = Color(0.423529, 0.929412, 0.929412, 1)
script = ExtResource("1_5wrcg")

[node name="MiningParticles" type="GPUParticles2D" parent="."]
position = Vector2(300, 0)
amount = 64
process_material = SubResource("ParticleProcessMaterial_ibytw")
texture = ExtResource("2_24gou")

[node name="Emitterparticles" type="GPUParticles2D" parent="."]
position = Vector2(32, 0)
amount = 16
process_material = SubResource("ParticleProcessMaterial_ty8x6")
texture = ExtResource("2_24gou")
lifetime = 0.25

[node name="MiningLight" type="PointLight2D" parent="."]
position = Vector2(300, 0)
color = Color(0, 1, 1, 1)
energy = 5.0
texture = ExtResource("1_7akcb")
texture_scale = 0.5

[node name="EmitterLight" type="PointLight2D" parent="."]
position = Vector2(32, 0)
color = Color(0.423529, 0.929412, 0.929412, 1)
energy = 5.0
texture = ExtResource("1_7akcb")
texture_scale = 0.25
